--- a/lp-s90.html
+++ b/lp-s90.html
@@ -4,11 +4,12 @@
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>Starter-90（営業DXスターター90）｜株式会社EXPAND</title>
+  <meta name="description" content="90日・4ステップで営業の土台を整理し、「使われ、回る状態」まで一緒につくる実行支援プログラム Starter-90 のご案内。" />
 
-  <!-- 本サイト共通（借りるのはOK） -->
+  <!-- 本サイト共通CSS（借りるのはOK） -->
   <link rel="stylesheet" href="/css/styles.css" />
 
-  <!-- LP専用 -->
+  <!-- LP専用CSS（必須） -->
   <link rel="stylesheet" href="/css/lp-s90.css" />
 </head>
 
@@ -17,20 +18,18 @@
   <!-- SECTION 1｜HERO -->
   <section class="lp-s90-hero">
     <div class="container lp-s90-hero__inner">
-      <p class="lp-s90-hero__eyebrow">営業DXスターター90（Starter-90）</p>
-
       <h1 class="lp-s90-hero__title">営業の状況、いま“見える化”できていますか？</h1>
 
       <p class="lp-s90-hero__lead">
-        営業部隊の頑張りを「見える形」にすることで、<br />
-        営業は、より効率的で安定したものになります。<br />
-        Starter-90 は、90日・4ステップで<br />
+        営業部隊の頑張りを「見える形」にすることで、<br>
+        営業は、より効率的で安定したものになります。<br><br>
+        Starter-90 は、90日・4ステップで<br>
         営業の土台を整理し、「使われ、回る状態」まで一緒につくる実行支援です。
       </p>
 
-      <!-- CTA（1/2） -->
+      <!-- CTA（1/2）：SECTION1のみ -->
       <div class="lp-s90-hero__cta">
-        <a class="btn btn-primary lp-s90-btn" href="/contact.html">まずは無料で相談する</a>
+        <a class="btn btn-primary lp-s90-hero__btn" href="/contact.html">まずは無料で相談する</a>
       </div>
 
       <!-- サブ導線（HERO内のみ） -->
@@ -54,20 +53,20 @@
       </ul>
 
       <p class="lp-s90-empathy__closing">
-        よくなるために、整える余白はまだあります。<br />
+        よくなるために、整える余白はまだあります。<br>
         Starter-90 で、90日かけて“整理できる状態”にしていきます。
       </p>
     </div>
   </section>
 
-  <!-- SECTION 3｜概要 -->
+  <!-- SECTION 3｜サービス概要 -->
   <section class="lp-s90-overview">
     <div class="container lp-s90-overview__inner">
       <h2 class="lp-s90-overview__title">Starter-90 とは</h2>
 
       <p class="lp-s90-overview__text">
-        Starter-90 は、短期間で「営業の土台」を整えるプログラムです。<br />
-        ツールを入れることがゴールではありません。<br />
+        Starter-90 は、短期間で「営業の土台」を整えるプログラムです。<br>
+        ツールを入れることがゴールではありません。<br>
         現場で使われ、営業が回る状態まで一緒に進めます。
       </p>
 
@@ -81,15 +80,15 @@
     </div>
   </section>
 
-  <!-- SECTION 4｜90日4ステップ -->
-  <section class="lp-s90-steps" aria-labelledby="steps">
+  <!-- SECTION 4｜90日の4ステップ -->
+  <section class="lp-s90-steps">
     <div class="container lp-s90-steps__inner">
       <h2 class="lp-s90-steps__title" id="steps">90日で、ここまで整えます</h2>
 
       <div class="lp-s90-steps__grid">
         <article class="lp-s90-steps__card">
           <h3 class="lp-s90-steps__cardTitle">STEP1｜W1：現状の見える化</h3>
-          <ul class="lp-s90-steps__items">
+          <ul class="lp-s90-steps__list">
             <li>営業プロセスの整理</li>
             <li>数字の取り方を決定（最小限）</li>
             <li>課題の所在を可視化</li>
@@ -99,7 +98,7 @@
 
         <article class="lp-s90-steps__card">
           <h3 class="lp-s90-steps__cardTitle">STEP2｜W2–4：仕組み化</h3>
-          <ul class="lp-s90-steps__items">
+          <ul class="lp-s90-steps__list">
             <li>やること／やらないことを整理</li>
             <li>CRMを現場に合う形へ調整</li>
             <li>続く運用ルールを作成</li>
@@ -109,7 +108,7 @@
 
         <article class="lp-s90-steps__card">
           <h3 class="lp-s90-steps__cardTitle">STEP3｜W4–8：実運用</h3>
-          <ul class="lp-s90-steps__items">
+          <ul class="lp-s90-steps__list">
             <li>週次で状況を確認</li>
             <li>現場運用を伴走支援</li>
             <li>止まりやすい点を先回りで調整</li>
@@ -119,7 +118,7 @@
 
         <article class="lp-s90-steps__card">
           <h3 class="lp-s90-steps__cardTitle">STEP4｜W8–12：定着化</h3>
-          <ul class="lp-s90-steps__items">
+          <ul class="lp-s90-steps__list">
             <li>見える形を固定</li>
             <li>再現できる流れに</li>
             <li>次の改善が回る状態へ</li>
@@ -130,7 +129,13 @@
 
       <!-- 図解（このセクション下部） -->
       <div class="lp-s90-steps__diagram" aria-label="90日ロードマップ図解">
-        <!-- 画像 or SVG or HTML図解をここに配置 -->
+        <img
+          class="lp-s90-steps__diagramImg"
+          src="/assets/lp-s90/steps-diagram.svg"
+          alt="90日ロードマップ（W1→W2-4→W4-8→W8-12）"
+          loading="lazy"
+          decoding="async"
+        />
       </div>
     </div>
   </section>
@@ -171,13 +176,13 @@
     </div>
   </section>
 
-  <!-- SECTION 6｜Before/After -->
+  <!-- SECTION 6｜Before / After -->
   <section class="lp-s90-ba">
     <div class="container lp-s90-ba__inner">
       <h2 class="lp-s90-ba__title">90日後の変化</h2>
 
       <div class="lp-s90-ba__grid">
-        <div class="lp-s90-ba__col">
+        <div class="lp-s90-ba__col lp-s90-ba__col--before">
           <h3 class="lp-s90-ba__head">Before</h3>
           <ul class="lp-s90-ba__list">
             <li>見えにくい</li>
@@ -185,7 +190,8 @@
             <li>安定しない</li>
           </ul>
         </div>
-        <div class="lp-s90-ba__col">
+
+        <div class="lp-s90-ba__col lp-s90-ba__col--after">
           <h3 class="lp-s90-ba__head">After</h3>
           <ul class="lp-s90-ba__list">
             <li>数字で見える</li>
@@ -243,9 +249,9 @@
       <h2 class="lp-s90-cta__title">営業は、整えると強くなります。</h2>
       <p class="lp-s90-cta__lead">まずは現状を一緒に整理しませんか？</p>
 
-      <!-- CTA（2/2） -->
+      <!-- CTA（2/2）：SECTION9のみ -->
       <div class="lp-s90-cta__actions">
-        <a class="btn btn-primary lp-s90-btn" href="/contact.html">無料で相談する</a>
+        <a class="btn btn-primary lp-s90-cta__btn" href="/contact.html">無料で相談する</a>
       </div>
     </div>
   </section>
