--- a/lp-s90.html
+++ b/lp-s90.html
@@ -15,7 +15,7 @@
 
 <body class="lp-s90">
 
-  <!-- SECTION 1｜HERO -->
+  <!-- SECTION 1｜HERO（.lp-s90-hero） -->
   <section class="lp-s90-hero">
     <div class="container lp-s90-hero__inner">
       <h1 class="lp-s90-hero__title">営業の状況、いま“見える化”できていますか？</h1>
@@ -27,7 +27,7 @@
         営業の土台を整理し、「使われ、回る状態」まで一緒につくる実行支援です。
       </p>
 
-      <!-- CTA（1/2）：SECTION1のみ -->
+      <!-- CTA（1/2）※ここ以外にCTAを置かない -->
       <div class="lp-s90-hero__cta">
         <a class="btn btn-primary lp-s90-hero__btn" href="/contact.html">まずは無料で相談する</a>
       </div>
@@ -39,7 +39,7 @@
     </div>
   </section>
 
-  <!-- SECTION 2｜共感 -->
+  <!-- SECTION 2｜共感（.lp-s90-empathy） -->
   <section class="lp-s90-empathy">
     <div class="container lp-s90-empathy__inner">
       <h2 class="lp-s90-empathy__title">こんな“感覚”、ありませんか？</h2>
@@ -59,7 +59,7 @@
     </div>
   </section>
 
-  <!-- SECTION 3｜サービス概要 -->
+  <!-- SECTION 3｜サービス概要（.lp-s90-overview） -->
   <section class="lp-s90-overview">
     <div class="container lp-s90-overview__inner">
       <h2 class="lp-s90-overview__title">Starter-90 とは</h2>
@@ -80,72 +80,104 @@
     </div>
   </section>
 
-  <!-- SECTION 4｜90日の4ステップ -->
+  <!-- SECTION 4｜90日の4ステップ（.lp-s90-steps） -->
   <section class="lp-s90-steps">
     <div class="container lp-s90-steps__inner">
       <h2 class="lp-s90-steps__title" id="steps">90日で、ここまで整えます</h2>
 
       <div class="lp-s90-steps__grid">
+
+        <!-- STEP1 -->
         <article class="lp-s90-steps__card">
-          <h3 class="lp-s90-steps__cardTitle">STEP1｜W1：現状の見える化</h3>
+          <div class="lp-s90-steps__head">
+            <span class="lp-s90-steps__icon" aria-hidden="true">
+              <!-- ASSET（インライン）: /assets/lp-s90/icon-step1.svg のSVGソースをここにそのまま貼る -->
+            </span>
+            <h3 class="lp-s90-steps__cardTitle">STEP1｜W1：現状の見える化</h3>
+          </div>
+
           <ul class="lp-s90-steps__list">
             <li>営業プロセスの整理</li>
             <li>数字の取り方を決定（最小限）</li>
             <li>課題の所在を可視化</li>
           </ul>
+
           <p class="lp-s90-steps__note">まずは、何が起きているかを把握します。</p>
         </article>
 
+        <!-- STEP2 -->
         <article class="lp-s90-steps__card">
-          <h3 class="lp-s90-steps__cardTitle">STEP2｜W2–4：仕組み化</h3>
+          <div class="lp-s90-steps__head">
+            <span class="lp-s90-steps__icon" aria-hidden="true">
+              <!-- ASSET（インライン）: /assets/lp-s90/icon-step2.svg のSVGソースをここにそのまま貼る -->
+            </span>
+            <h3 class="lp-s90-steps__cardTitle">STEP2｜W2–4：仕組み化</h3>
+          </div>
+
           <ul class="lp-s90-steps__list">
             <li>やること／やらないことを整理</li>
             <li>CRMを現場に合う形へ調整</li>
             <li>続く運用ルールを作成</li>
           </ul>
+
           <p class="lp-s90-steps__note">続かない仕組みは作りません。</p>
         </article>
 
+        <!-- STEP3 -->
         <article class="lp-s90-steps__card">
-          <h3 class="lp-s90-steps__cardTitle">STEP3｜W4–8：実運用</h3>
+          <div class="lp-s90-steps__head">
+            <span class="lp-s90-steps__icon" aria-hidden="true">
+              <!-- ASSET（インライン）: /assets/lp-s90/icon-step3.svg のSVGソースをここにそのまま貼る -->
+            </span>
+            <h3 class="lp-s90-steps__cardTitle">STEP3｜W4–8：実運用</h3>
+          </div>
+
           <ul class="lp-s90-steps__list">
             <li>週次で状況を確認</li>
             <li>現場運用を伴走支援</li>
             <li>止まりやすい点を先回りで調整</li>
           </ul>
+
           <p class="lp-s90-steps__note">回しながら、必要な修正を入れます。</p>
         </article>
 
+        <!-- STEP4 -->
         <article class="lp-s90-steps__card">
-          <h3 class="lp-s90-steps__cardTitle">STEP4｜W8–12：定着化</h3>
+          <div class="lp-s90-steps__head">
+            <span class="lp-s90-steps__icon" aria-hidden="true">
+              <!-- ASSET（インライン）: /assets/lp-s90/icon-step4.svg のSVGソースをここにそのまま貼る -->
+            </span>
+            <h3 class="lp-s90-steps__cardTitle">STEP4｜W8–12：定着化</h3>
+          </div>
+
           <ul class="lp-s90-steps__list">
             <li>見える形を固定</li>
             <li>再現できる流れに</li>
             <li>次の改善が回る状態へ</li>
           </ul>
+
           <p class="lp-s90-steps__note">90日後は自走を目指します。</p>
         </article>
+
       </div>
 
-      <!-- 図解（このセクション下部） -->
+      <!-- 図解（W1→W2-4→W4-8→W8-12）※セクション下部に配置 -->
       <div class="lp-s90-steps__diagram" aria-label="90日ロードマップ図解">
-        <img
-          class="lp-s90-steps__diagramImg"
-          src="/assets/lp-s90/steps-diagram.svg"
-          alt="90日ロードマップ（W1→W2-4→W4-8→W8-12）"
-          loading="lazy"
-          decoding="async"
-        />
+        <div class="lp-s90-steps__timeline" role="img" aria-label="90日タイムライン（W1→W2-4→W4-8→W8-12）">
+          <!-- ASSET（インライン）: /assets/lp-s90/steps-timeline.svg のSVGソースをここにそのまま貼る -->
+        </div>
       </div>
+
     </div>
   </section>
 
-  <!-- SECTION 5｜プラン -->
+  <!-- SECTION 5｜プラン（.lp-s90-plans） -->
   <section class="lp-s90-plans">
     <div class="container lp-s90-plans__inner">
       <h2 class="lp-s90-plans__title">プラン一覧</h2>
 
       <div class="lp-s90-plans__grid">
+
         <article class="lp-s90-plans__card">
           <h3 class="lp-s90-plans__name">ライト｜25万円</h3>
           <ul class="lp-s90-plans__list">
@@ -156,7 +188,10 @@
         </article>
 
         <article class="lp-s90-plans__card lp-s90-plans__card--recommended">
-          <div class="lp-s90-plans__badge">おすすめ</div>
+          <span class="lp-s90-plans__badge" aria-label="おすすめ">
+            <!-- ASSET（インライン）: /assets/lp-s90/badge-recommended.svg のSVGソースをここにそのまま貼る -->
+          </span>
+
           <h3 class="lp-s90-plans__name">スタンダード｜50万円</h3>
           <ul class="lp-s90-plans__list">
             <li>90日4ステップ実行支援</li>
@@ -172,14 +207,22 @@
             <li>研修3時間</li>
           </ul>
         </article>
+
       </div>
     </div>
   </section>
 
-  <!-- SECTION 6｜Before / After -->
+  <!-- SECTION 6｜Before / After（.lp-s90-ba） -->
   <section class="lp-s90-ba">
     <div class="container lp-s90-ba__inner">
       <h2 class="lp-s90-ba__title">90日後の変化</h2>
+
+      <!-- ミニ図（煽らない）※タイトル下 -->
+      <div class="lp-s90-ba__mini" aria-hidden="true">
+        <span class="lp-s90-ba__miniSvg">
+          <!-- ASSET（インライン）: /assets/lp-s90/ba-mini.svg のSVGソースをここにそのまま貼る -->
+        </span>
+      </div>
 
       <div class="lp-s90-ba__grid">
         <div class="lp-s90-ba__col lp-s90-ba__col--before">
@@ -203,7 +246,7 @@
     </div>
   </section>
 
-  <!-- SECTION 7｜導入の流れ -->
+  <!-- SECTION 7｜導入の流れ（.lp-s90-flow） -->
   <section class="lp-s90-flow">
     <div class="container lp-s90-flow__inner">
       <h2 class="lp-s90-flow__title">導入までの流れ</h2>
@@ -219,7 +262,7 @@
     </div>
   </section>
 
-  <!-- SECTION 8｜FAQ -->
+  <!-- SECTION 8｜FAQ（.lp-s90-faq） -->
   <section class="lp-s90-faq">
     <div class="container lp-s90-faq__inner">
       <h2 class="lp-s90-faq__title">FAQ</h2>
@@ -243,13 +286,13 @@
     </div>
   </section>
 
-  <!-- SECTION 9｜最終CTA -->
+  <!-- SECTION 9｜最終CTA（.lp-s90-cta） -->
   <section class="lp-s90-cta">
     <div class="container lp-s90-cta__inner">
       <h2 class="lp-s90-cta__title">営業は、整えると強くなります。</h2>
       <p class="lp-s90-cta__lead">まずは現状を一緒に整理しませんか？</p>
 
-      <!-- CTA（2/2）：SECTION9のみ -->
+      <!-- CTA（2/2）※ここ以外にCTAを置かない -->
       <div class="lp-s90-cta__actions">
         <a class="btn btn-primary lp-s90-cta__btn" href="/contact.html">無料で相談する</a>
       </div>
