--- a/lp-s90.html
+++ b/lp-s90.html
@@ -90,11 +90,28 @@
         <!-- STEP1 -->
         <article class="lp-s90-steps__card">
           <div class="lp-s90-steps__head">
-            <span class="lp-s90-steps__icon" aria-hidden="true">
-              <!-- ASSET（インライン）: /assets/lp-s90/icon-step1.svg のSVGソースをここにそのまま貼る -->
-            </span>
-            <h3 class="lp-s90-steps__cardTitle">STEP1｜W1：現状の見える化</h3>
-          </div>
+          <span class="lp-s90-steps__icon" aria-hidden="true">
+
+     <svg xmlns="http://www.w3.org/2000/svg"
+         viewBox="0 0 24 24"
+         role="img"
+         aria-label="見える化">
+      <g fill="none"
+         stroke="currentColor"
+         stroke-width="2"
+         stroke-linecap="round"
+         stroke-linejoin="round">
+        <circle cx="10" cy="10" r="5"/>
+        <path d="M14 14l6 6"/>
+        <path d="M7.8 11.2l1.8-2.2 1.6 1.4 2.8-3.1"/>
+      </g>
+    </svg>
+
+  </span>
+
+  <h3 class="lp-s90-steps__cardTitle">STEP1｜W1：現状の見える化</h3>
+</div>
+
 
           <ul class="lp-s90-steps__list">
             <li>営業プロセスの整理</li>
