--- a/lp-s90.html
+++ b/lp-s90.html
@@ -125,11 +125,30 @@
         <!-- STEP2 -->
         <article class="lp-s90-steps__card">
           <div class="lp-s90-steps__head">
-            <span class="lp-s90-steps__icon" aria-hidden="true">
-              <!-- ASSET（インライン）: /assets/lp-s90/icon-step2.svg のSVGソースをここにそのまま貼る -->
-            </span>
-            <h3 class="lp-s90-steps__cardTitle">STEP2｜W2–4：仕組み化</h3>
-          </div>
+  <span class="lp-s90-steps__icon" aria-hidden="true">
+
+    <svg xmlns="http://www.w3.org/2000/svg"
+         viewBox="0 0 24 24"
+         role="img"
+         aria-label="仕組み化">
+      <g fill="none"
+         stroke="currentColor"
+         stroke-width="2"
+         stroke-linecap="round"
+         stroke-linejoin="round">
+        <rect x="3" y="4" width="7" height="6" rx="2"/>
+        <rect x="14" y="4" width="7" height="6" rx="2"/>
+        <rect x="8.5" y="14" width="7" height="6" rx="2"/>
+        <path d="M10 7h4"/>
+        <path d="M12 10v4"/>
+      </g>
+    </svg>
+
+  </span>
+
+  <h3 class="lp-s90-steps__cardTitle">STEP2｜W2–4：仕組み化</h3>
+</div>
+
 
           <ul class="lp-s90-steps__list">
             <li>やること／やらないことを整理</li>
