--- a/lp-s90.html
+++ b/lp-s90.html
@@ -162,11 +162,30 @@
         <!-- STEP3 -->
         <article class="lp-s90-steps__card">
           <div class="lp-s90-steps__head">
-            <span class="lp-s90-steps__icon" aria-hidden="true">
-              <!-- ASSET（インライン）: /assets/lp-s90/icon-step3.svg のSVGソースをここにそのまま貼る -->
-            </span>
-            <h3 class="lp-s90-steps__cardTitle">STEP3｜W4–8：実運用</h3>
-          </div>
+  <span class="lp-s90-steps__icon" aria-hidden="true">
+
+    <svg xmlns="http://www.w3.org/2000/svg"
+         viewBox="0 0 24 24"
+         role="img"
+         aria-label="実運用">
+      <g fill="none"
+         stroke="currentColor"
+         stroke-width="2"
+         stroke-linecap="round"
+         stroke-linejoin="round">
+        <path d="M20 12a8 8 0 0 0-14.9-4"/>
+        <path d="M4 8V4h4"/>
+        <path d="M4 12a8 8 0 0 0 14.9 4"/>
+        <path d="M20 16v4h-4"/>
+        <path d="M9 12l2 2 4-4"/>
+      </g>
+    </svg>
+
+  </span>
+
+  <h3 class="lp-s90-steps__cardTitle">STEP3｜W4–8：実運用</h3>
+</div>
+
 
           <ul class="lp-s90-steps__list">
             <li>週次で状況を確認</li>
