--- a/lp-s90.html
+++ b/lp-s90.html
@@ -199,11 +199,28 @@
         <!-- STEP4 -->
         <article class="lp-s90-steps__card">
           <div class="lp-s90-steps__head">
-            <span class="lp-s90-steps__icon" aria-hidden="true">
-              <!-- ASSET（インライン）: /assets/lp-s90/icon-step4.svg のSVGソースをここにそのまま貼る -->
-            </span>
-            <h3 class="lp-s90-steps__cardTitle">STEP4｜W8–12：定着化</h3>
-          </div>
+  <span class="lp-s90-steps__icon" aria-hidden="true">
+
+    <svg xmlns="http://www.w3.org/2000/svg"
+         viewBox="0 0 24 24"
+         role="img"
+         aria-label="定着化">
+      <g fill="none"
+         stroke="currentColor"
+         stroke-width="2"
+         stroke-linecap="round"
+         stroke-linejoin="round">
+        <path d="M12 21s6-4.2 6-10a6 6 0 1 0-12 0c0 5.8 6 10 6 10z"/>
+        <circle cx="12" cy="11" r="2"/>
+        <path d="M6 21h12"/>
+      </g>
+    </svg>
+
+  </span>
+
+  <h3 class="lp-s90-steps__cardTitle">STEP4｜W8–12：定着化</h3>
+</div>
+
 
           <ul class="lp-s90-steps__list">
             <li>見える形を固定</li>
