--- a/lp-s90.html
+++ b/lp-s90.html
@@ -315,17 +315,35 @@
         </article>
 
         <article class="lp-s90-plans__card lp-s90-plans__card--recommended">
-          <span class="lp-s90-plans__badge" aria-label="おすすめ">
-            <!-- ASSET（インライン）: /assets/lp-s90/badge-recommended.svg のSVGソースをここにそのまま貼る -->
-          </span>
 
-          <h3 class="lp-s90-plans__name">スタンダード｜50万円</h3>
-          <ul class="lp-s90-plans__list">
-            <li>90日4ステップ実行支援</li>
-            <li>CRM／運用の型づくり</li>
-            <li>定着まで伴走</li>
-          </ul>
-        </article>
+  <span class="lp-s90-plans__badge" aria-label="おすすめ">
+    <svg xmlns="http://www.w3.org/2000/svg"
+         viewBox="0 0 140 44"
+         role="img"
+         aria-label="おすすめ">
+      <rect x="2" y="2" width="136" height="40" rx="999"
+            fill="currentColor" opacity=".12"/>
+      <rect x="2" y="2" width="136" height="40" rx="999"
+            fill="none" stroke="currentColor" opacity=".35"/>
+      <text x="70" y="28" text-anchor="middle"
+            font-family="system-ui,-apple-system,BlinkMacSystemFont,'Segoe UI','Noto Sans JP',sans-serif"
+            font-size="16" font-weight="600"
+            fill="currentColor" opacity=".9">
+        おすすめ
+      </text>
+    </svg>
+  </span>
+
+  <h3 class="lp-s90-plans__name">スタンダード｜50万円</h3>
+
+  <ul class="lp-s90-plans__list">
+    <li>90日4ステップ実行支援</li>
+    <li>CRM／運用の型づくり</li>
+    <li>定着まで伴走</li>
+  </ul>
+
+</article>
+
 
         <article class="lp-s90-plans__card">
           <h3 class="lp-s90-plans__name">プレミアム｜80万円</h3>
