--- a/lp-s90.html
+++ b/lp-s90.html
@@ -10,7 +10,8 @@
   <link rel="stylesheet" href="/css/styles.css" />
 
   <!-- LP専用 -->
-  <link rel="stylesheet" href="/css/lp-s90.css" />
+  <link rel="stylesheet" href="/css/lp-s90.css?v=20251216-01">
+
 </head>
 
 <body class="lp-s90">
