--- a/index.html
+++ b/index.html
@@ -16,7 +16,8 @@
   <meta name="description" content="株式会社EXPANDは、営業支援・DX推進・人材育成を中心に、企業の成長を実行レベルで支援する伴走型コンサルティング企業です。現場に寄り添い、仕組みづくりから運用まで一気通貫でサポートします。">
 
   <link rel="icon" href="assets/favicon.svg" type="image/svg+xml">
-
+　<link rel="canonical" href="https://www.fs-expand.co.jp/">
+  
   <!-- GTM への接続を事前に確立（小さな最適化） -->
   <link rel="preconnect" href="https://www.googletagmanager.com">
   <link rel="dns-prefetch" href="https://www.googletagmanager.com">
