--- a/contact.html
+++ b/contact.html
@@ -15,6 +15,8 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
   <meta name="description" content="株式会社EXPANDへのお問い合わせはこちら。営業支援・DX推進・人材育成など、貴社の課題に合わせて最適な支援をご提案します。">
   <link rel="icon" href="assets/favicon.svg" type="image/svg+xml">
   <link rel="stylesheet" href="css/styles.css?v=3">
+  <link rel="canonical" href="https://www.fs-expand.co.jp/contact.html">
+
 </head>
 
 <body>
