--- a/service-education.html
+++ b/service-education.html
@@ -19,6 +19,8 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
   <meta property="og:description" content="現場で実際に使えるスキルと仕組みづくりにこだわった、人材育成・研修プログラムをご提供します。">
   <meta property="og:type" content="website">
   <meta property="og:url" content="https://fs-expand.co.jp/">
+  <link rel="canonical" href="https://www.fs-expand.co.jp/service-education.html">
+
 </head>
 <body>
   <!-- Google Tag Manager (noscript) -->
