--- a/service-crm.html
+++ b/service-crm.html
@@ -19,6 +19,8 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
 　<meta property="og:description" content="顧客情報の一元管理と営業プロセスの標準化で、売上の最大化をサポートします。">
   <meta property="og:type" content="website">
   <meta property="og:url" content="https://fs-expand.co.jp/">
+  <link rel="canonical" href="https://www.fs-expand.co.jp/service-crm.html">
+
 </head>
   
 <body>
