--- a/service-web.html
+++ b/service-web.html
@@ -19,6 +19,8 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
   <meta property="og:description" content="営業・採用・問い合わせなど、目的に合ったWebサイトとマーケティング施策で、成果につながる導線づくりを支援します。">
   <meta property="og:type" content="website">
   <meta property="og:url" content="https://fs-expand.co.jp/">
+  <link rel="canonical" href="https://www.fs-expand.co.jp/service-web.html">
+
 </head>
 <body>
   <!-- Google Tag Manager (noscript) -->
