--- a/lp-s90.html
+++ b/lp-s90.html
@@ -14,6 +14,18 @@
 
 <body class="lp-s90">
 
+  <header class="site-header">
+  <a class="brand" href="/">
+    <img src="/assets/logo.png" alt="EXPAND ロゴ" class="logo small" width="180" height="60">
+  </a>
+
+  <nav class="nav" aria-label="グローバルナビ">
+    <a href="/">ホーム</a>
+    <a href="/about.html">会社概要</a>
+    <a href="/contact.html" class="btn btn-primary">無料相談</a>
+  </nav>
+</header>
+
   <!-- SECTION 1｜HERO -->
   <section class="lp-s90-hero">
     <div class="container lp-s90-hero__inner">
@@ -386,6 +398,26 @@
       </div>
     </div>
   </section>
+
+  <footer class="site-footer">
+  <div class="footer-inner">
+    <div class="foot-brand">
+      <!--
+      <img src="/assets/logo.png" alt="EXPAND ロゴ" class="logo small">
+      <span>EXPAND Co., Ltd.</span>
+      -->
+    </div>
+
+    <div class="foot-links">
+      <a href="/about.html">会社概要</a>
+      <a href="/contact.html">お問い合わせ</a>
+      <a href="/privacy.html">プライバシーポリシー</a>
+      <a href="/terms.html">サイト利用規約</a>
+    </div>
+  </div>
+
+  <p class="copy">© 2018 EXPAND Co., Ltd. All rights reserved.</p>
+</footer>
 
 </body>
 </html>
