--- a/lp-s90.html
+++ b/lp-s90.html
@@ -13,16 +13,14 @@
 </head>
 
 <body class="lp-s90">
-
-  <header class="site-header">
+<header class="site-header">
   <a class="brand" href="/">
-    <img src="/assets/logo.png" alt="EXPAND ロゴ" class="logo small" width="180" height="60">
+    <img src="/assets/logo.png" alt="EXPAND ロゴ" class="logo" width="180" height="60">
   </a>
-
-  <nav class="nav" aria-label="グローバルナビ">
+  <nav class="nav">
     <a href="/">ホーム</a>
     <a href="/about.html">会社概要</a>
-    <a href="/contact.html" class="btn btn-primary">無料相談</a>
+    <a href="/contact.html" class="btn small">お問い合わせ</a>
   </nav>
 </header>
 
