--- a/index.html
+++ b/index.html
@@ -151,31 +151,66 @@
   </div>
 </section>
 
-<section class="lp-entry lp-entry--s90">
-  <div class="lp-entry__inner">
-    <p class="lp-entry__eyebrow">営業DXスターター90（Starter-90）</p>
-    <h2 class="lp-entry__title">営業の土台を、90日で整える</h2>
-    <p class="lp-entry__text">
-      見える化 → 仕組み化 → 実運用 → 定着化。
-      まずは現状を整理し、「使われ、回る状態」まで一緒につくります。
+  <!-- 営業DXスターター90導線 -->
+<section class="service-entry">
+  <div class="service-entry__inner">
+
+    <p class="service-entry__label">
+      営業DXスターター90（Starter-90）
     </p>
-    <div class="lp-entry__actions">
-      <a class="btn btn-primary" href="/lp-s90.html">Starter-90を見る</a>
-      <a class="btn ghost" href="/contact.html">無料で相談する</a>
+
+    <h2 class="service-entry__title">
+      営業の土台を90日で整える
+    </h2>
+
+    <p class="service-entry__text">
+      見える化 → 仕組み化 → 実運用 → 定着化。<br>
+      現状を整理し、「使われ、回る営業体制」を一緒につくります。
+    </p>
+
+    <div class="service-entry__actions">
+      <a href="/lp-s90.html" class="btn primary">
+        Starter-90を見る
+      </a>
+      <a href="/contact.html" class="btn secondary">
+        無料で相談する
+      </a>
     </div>
+
   </div>
 </section>
 
+
   
   <!-- 飲食店向けライトパッケージ導線 -->
-<section class="lp-entry">
-  <p class="lp-entry__text">
-    飲食店経営者の方へ｜
-    <a href="/lp-fnb.html" class="lp-entry__link">
-      飲食店向けライトパッケージはこちら →
-    </a>
-  </p>
+<section class="service-entry">
+  <div class="service-entry__inner">
+
+    <p class="service-entry__label">
+      飲食店向けライトパッケージ
+    </p>
+
+    <h2 class="service-entry__title">
+      飲食店の現場を、無理なく整える
+    </h2>
+
+    <p class="service-entry__text">
+      現場に合わない仕組みは使われません。<br>
+      小さく整え、回る形を一緒につくります。
+    </p>
+
+    <div class="service-entry__actions">
+      <a href="/lp-fnb.html" class="btn primary">
+        飲食店向けLPを見る
+      </a>
+      <a href="/contact.html" class="btn secondary">
+        無料で相談する
+      </a>
+    </div>
+
+  </div>
 </section>
+
 
   <!-- CTA：無料相談 -->
 <section class="section cta" id="contact-cta">
